--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "dev": "bash -c \" npm run build && live-server --port=8848 ./dist/ & gulp watch \"",
     "build": "npm run clean && gulp",
     "clean": "rm -rf ./dist",
-    "release": "npm run build"
+    "release": "npm run build && rm -rf ../../demos/uoowuo.github.io/slotmachine/* && cp -a ./dist/* ../../demos/uoowuo.github.io/slotmachine/ && echo release copied"
   },
   "keywords": [
     "test"
   ],
   "homepage": "https://github.com/uoowuo/slotmachine/",
-  "version": "1.1.0"
+  "version": "1.1.1"
 }
